cmake_minimum_required(VERSION 3.2)
project(rt-examples)

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pedantic -Wall -march=native")

set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)

include_directories("common")
add_executable(cyclic cyclic/cyclic.c common/utils.c)
add_executable(deadline deadline/deadline.c common/utils.c)
add_executable(signal signal/signal.c common/utils.c)
target_link_libraries(cyclic Threads::Threads)
target_link_libraries(deadline Threads::Threads)
target_link_libraries(signal Threads::Threads)

option(WITH_LTTNG "Build with LTTNG Examples" ON)
if (WITH_LTTNG)
  find_package(PkgConfig REQUIRED)
  pkg_search_module(LTTNG_UST lttng-ust REQUIRED)
  add_executable(cyclic_lttng lttng/cyclic.c lttng/cyclic-tp.c common/utils.c)
  link_directories(${LTTNG_UST_LIBRARY_DIRS})
  target_include_directories(cyclic_lttng PRIVATE ${LTTNG_UST_INCLUDE_DIRS})
  target_include_directories(cyclic_lttng PRIVATE lttng)
  target_link_libraries(cyclic_lttng ${LTTNG_UST_LIBRARIES})
  target_link_libraries(cyclic_lttng Threads::Threads)
endif()
